--- a/BooksApp/app/build.gradle
+++ b/BooksApp/app/build.gradle
@@ -18,6 +18,10 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -29,4 +33,5 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.+'
     implementation 'com.android.support:recyclerview-v7:28.+'
     implementation 'com.android.support:gridlayout-v7:28.0.0'
+    implementation 'com.google.apis:google-api-services-books:v1-rev104-1.25.0'
 }
