--- a/BooksApp/app/build.gradle
+++ b/BooksApp/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.adolphe.booksapp"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.+'
     implementation 'com.android.support:gridlayout-v7:28.0.0'
     implementation 'com.google.apis:google-api-services-books:v1-rev104-1.25.0'
+    implementation 'com.github.jgabrielfreitas:BlurImageView:1.0.1'
 }
