--- a/BooksApp/app/build.gradle
+++ b/BooksApp/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation 'com.android.support:gridlayout-v7:28.0.0'
     implementation 'com.google.apis:google-api-services-books:v1-rev104-1.25.0'
     implementation 'com.github.jgabrielfreitas:BlurImageView:1.0.1'
+    implementation 'com.yinglan.shadowimageview:shadowimageview:1.0.4'
 }
